--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header class="bg-info container-fluid">
+    <header class="bg-warning container-fluid">
         <div class="row text-white">
             <div class="col-md-6 col-10 p-3 pl-5">
                 <h2>Muhammed Minhaj T U</h2>
