--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Muhammed Minhaj T U</title>
-    <link rel="icon" type="image/x-icon" href="images/WIN_20230617_20_07_58_Pro.jpg">
+    <link rel="icon" type="image/x-icon" href="images/530869951_1822510255367034_4050913803804939431_n (1).jpg">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 <body>
-    <header class="bg-warning container-fluid">
+    <header class="bg-info container-fluid">
         <div class="row text-white">
             <div class="col-md-6 col-10 p-3 pl-5">
-                <h2>Muhammed Minhaj T U</h2>
+                <h2>Abdul Vahab T V</h2>
             </div>
             <div class="col-md-6 col-2 my-auto ">
                 <nav class="navbar navbar-expand-lg navbar-light ">
@@ -52,14 +52,14 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-6 d">
-                    <img src="images/WIN_20230617_20_07_58_Pro.jpg" class="img-fluid  rounded-circle  " alt="">
+                    <img src="images/530869951_1822510255367034_4050913803804939431_n (1).jpg" class="img-fluid  rounded-circle  " alt="">
 
                 </div>
                 <div class="col-md-6">
                     <h4>Business Partner at CNG Business <br> Ernakulam, Kerala, India</h4>
                     <blockquote class="blockquote">
                         <p>"you are the avarage of 5 people you hang aruond"</p>
-                        <footer>- Minhaj</footer>
+                        <footer>- aimu tv</footer>
                     </blockquote>
 
 
