--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="scroll-behavior: smooth;">
 
 <head>
     <meta charset="UTF-8">
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header class="bg-info container-fluid">
+    <header class="bg-info container-fluid fixed-top" >
         <div class="row text-white">
             <div class="col-md-6 col-10 p-3 pl-5">
                 <h2>Abdul Vahab T V</h2>
@@ -28,16 +28,16 @@
                     <div class="collapse navbar-collapse " id="navbarSupportedContent">
                         <ul class="navbar-nav ml-auto ">
                             <li class="nav-item active">
-                                <a class="nav-link text-white " href="#">Home <span class="sr-only">(current)</span></a>
+                                <a class="nav-link text-white " href="#Home-section">Home <span class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-white" href="#">Services</a>
+                                <a class="nav-link text-white" href="#Services-section">Services</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-white" href="#">Experience</a>
+                                <a class="nav-link text-white" href="#Experiance-section">Experience</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-white" href="#">Contact Me</a>
+                                <a class="nav-link text-white" href="#Contact-me-section">Contact Me</a>
                             </li>
 
                         </ul>
@@ -48,13 +48,12 @@
         </div>
     </header>
 
-    <section class="p-4 ">
+    <section  style="padding-top: 7em;padding-bottom: 3em;" id="Home-section">
         <div class="container">
-            <div class="row align-items-center">
-                <div class="col-md-6 d">
+            <div class="row align-items-center ">
+                <div class="col-md-6 " >
                     <img src="images/530869951_1822510255367034_4050913803804939431_n (1).jpg"
-                        class="img-fluid  rounded-circle  " alt="">
-
+                        class="img-fluid  rounded-circle  "  style="height: 22em;">
                 </div>
                 <div class="col-md-6">
                     <h4 class="pt-5">Business Partner at CNG Business <br> Ernakulam, Kerala, India</h4>
@@ -68,7 +67,7 @@
             </div>
         </div>
     </section>
-    <section class="bg-light p-5">
+    <section class="bg-light p-5" id="Services-section">
         <div class="container">
             <h1 class="text-center">Services</h1>
             <div class="row">
@@ -143,7 +142,7 @@
         </div>
     </section>
 
-    <section class="bg-white p-5">
+    <section class="bg-white p-5" id="Experiance-section">
         <div class="container">
             <h1 class="text-center">Experiances</h1>
             <div class="row">
@@ -222,7 +221,7 @@
         </div>
     </section>
 
-    <section class="p-5 bg-light">
+    <section class="p-5 bg-light" id="Contact-me-section">
         <div class="container">
             <h1 class="text-center">Contact Me</h1>
             <div class="row">
@@ -270,7 +269,16 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center text-white">
-                    <p>Copirights</p>
+                    <a href="https://www.facebook.com/abdul.vahab.92560281" style="text-decoration: none;color: white;">
+                        <i class="fa-brands fa-square-facebook"></i>
+                    </a>
+                    <a href="https://www.instagram.com/_abo_gado_/" style="text-decoration: none;color: white;">
+                        <i class="fa-brands fa-instagram"></i>
+                    </a>
+                    <a href="https://sites.google.com/view/abdulvahabtv/home" style="text-decoration: none;color: white;">
+                        <i class="fa-solid fa-globe"></i>
+                    </a>
+                    <p>Copirights ©</p>
                 </div>
             </div>
         </div>
