--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="scroll-behavior: smooth;">
+<html lang="en" style="scroll-behavior: smooth; scroll-padding-top: 2em;">
 
 <head>
     <meta charset="UTF-8">
@@ -66,10 +66,10 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section >
     <section class="bg-light p-5" id="Services-section">
         <div class="container">
-            <h1 class="text-center">Services</h1>
+            <h1 class="text-center " >Services</h1>
             <div class="row">
                 <div class="col-md-4">
                     <div class=" align-items-center p-3 card ">
